[package]
name = "suffix_array"
version = "0.3.1"
authors = ["hucsmn <hucsmn@hotmail.com>"]
edition = "2018"
homepage = "https://github.com/hucsmn/suffix_array"
repository = "https://github.com/hucsmn/suffix_array"
license = "MIT"
readme = "README.md"
categories = ["algorithms"]
keywords = ["suffix_array", "binary", "sais"]
description = """
Suffix array construction and searching algorithms for in-memory binary
data, focusing on space efficiency.
"""

[dependencies]
rayon = { optional = true, version = "1.0" }
bitpacking = { optional = true, version = "0.6" }
serde = { optional = true, version = "1.0", features = ["derive"] }
bincode = { optional = true, version = "1.1" }

[dev-dependencies]
rand = "0.6"
flate2 = "1"
reqwest = "0.9"
criterion = "0.2"
rental = "0.5"
proptest = "0.9"

[features]
default = ["rayon"]
pack = ["bitpacking", "serde", "bincode"]

[[bench]]
name = "sa_search"
harness = false

[[bench]]
name = "sa_construct"
harness = false
